--- a/interior-design/components/styles/body.module.scss
+++ b/interior-design/components/styles/body.module.scss
@@ -153,7 +153,9 @@
     order: 1;
     padding: 0;
     position: relative;
-
+    overflow: hidden;
+    width: 100%;
+    max-width: 100vw;
 
     &::before {
       display: none;
@@ -175,6 +177,30 @@
     left: 50%;
     transform: translateX(-50%);
     animation: slideInRightCentered 1.2s ease-out;
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-drag: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    pointer-events: auto;
+    will-change: auto;
+    -webkit-tap-highlight-color: transparent;
+
+    &:hover {
+      transform: translateX(-50%) !important;
+      box-shadow: 0 20px 40px rgba(124, 110, 97, 0.2);
+    }
+
+    &:active {
+      transform: translateX(-50%) !important;
+    }
+
+    &:focus {
+      transform: translateX(-50%) !important;
+      outline: none;
+    }
   }
 }
 
